# awscli-plugin-passtotp

./: README.md  pyproject.toml
awscli_plugin_passtotp/: __init__.py  boto_plugin.py  prompter.py
